[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Font/CatChild_base_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Sprites/Led/led_red.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Lobby/InfoJoueur.gd" type="Script" id=3]

[node name="InfoJoueur" type="HBoxContainer"]
margin_right = 720.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 60.0
margin_bottom = 70.0
rect_min_size = Vector2( 60, 0 )
alignment = 1

[node name="LedPret" type="TextureRect" parent="VBoxContainer"]
margin_top = 11.0
margin_right = 60.0
margin_bottom = 59.0
texture = ExtResource( 2 )

[node name="LabelPret" type="Label" parent="."]
margin_left = 64.0
margin_top = 5.0
margin_right = 264.0
margin_bottom = 65.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Pas PrÃªt"

[node name="tiret" type="Label" parent="."]
margin_left = 268.0
margin_top = 5.0
margin_right = 313.0
margin_bottom = 65.0
rect_min_size = Vector2( 45, 0 )
custom_fonts/font = ExtResource( 1 )
text = "-"
align = 1

[node name="LabelNom" type="Label" parent="."]
margin_left = 317.0
margin_top = 5.0
margin_right = 654.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 1 )
text = "Le Nom du joueur"
